2009-11-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core.spec.in: Remove extra dots in description.

2009-11-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core.spec.in: Fix description, bundle
	versionned so files in devel package.

2009-11-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core.spec.in: Remove -avoid-version as it
	is not clear whether it should be included or not.

2009-11-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core.spec.in: Package all documentation
	in documentation package.

2009-11-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core.spec.in: Here.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Add rpm support.
	* Makefile.am: Include rpm generation rule.
	* build-aux: Synchronize.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* build-aux: Synchronize.
	* roboptim-core.spec.in: Fix description and rules.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec files.
	* roboptim-core.spec.in: Install additional files
	and fix dependencies.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core.spec.in: Fix mistakes detected by rpmlint.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Add RPM spec file.
	* roboptim-core.spec.in: New.

2009-11-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ROBOPTIM_DLLLOCAL when needed.
	* src/finite-difference-gradient.cc: Here.

2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ``this->'' in template code to help the compiler.
	* include/roboptim/core/problem.hxx,
	* include/roboptim/core/solver.hxx: Here.
