@@ -63,12 +63,13 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root,-)
-%{_libdir}/*.so
+%{_libdir}/*.so.*
+
 
 %files devel
 %defattr(-,root,root,-)
 %{_includedir}/*
-%{_libdir}/*.so.*
+%{_libdir}/*.so
 %{_libdir}/pkgconfig/*
 
 %files doc
